# services/src/models/Responses.go
@@ -7,3 +7,8 @@ type ErrResponse struct {
 type MsgResponse struct {
 	Msg string `json:"msg"`
 }
+
+type LoginResponse struct {
+	Name  string `json:"name"`
+	Token string `json:"token"`
+}
